k8s/blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
        - image: nginxdemos/hello # The image used is nginxdemos/hello.
          name: blue
          ports:
            - name: http-server
              containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: blue
spec:
  selector:
    app: blue
  type: NodePort
  ports:
    - protocol: TCP
      targetPort: 80
      port: 8080
