k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gray-release
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx # Use the Nginx ingress.
    kubernetes.io/elb.port: "80"
spec:
  rules:
    - host: www.example.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: blue # Specify old-nginx as the backend service.
                port:
                  number: 80
